docs: update docs

--- a/src/pages/guides/sheet/features/core.en-US.mdx
+++ b/src/pages/guides/sheet/features/core.en-US.mdx
@@ -48,11 +48,11 @@ import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as DesignEnUS } from '@univerjs/design';
-import { zhCN as DocsUIEnUS } from '@univerjs/docs-ui';
-import { zhCN as SheetsEnUS } from '@univerjs/sheets';
-import { zhCN as SheetsUIEnUS } from '@univerjs/sheets-ui';
-import { zhCN as UIEnUS } from '@univerjs/ui';
+import { enUS as DesignEnUS } from '@univerjs/design';
+import { enUS as DocsUIEnUS } from '@univerjs/docs-ui';
+import { enUS as SheetsEnUS } from '@univerjs/sheets';
+import { enUS as SheetsUIEnUS } from '@univerjs/sheets-ui';
+import { enUS as UIEnUS } from '@univerjs/ui';
 
 // Above 0.1.13+
 // import DesignEnUS from '@univerjs/design/locale/en-US';
