--- a/src/pages/guides/sheet/features/find-replace.en-US.mdx
+++ b/src/pages/guides/sheet/features/find-replace.en-US.mdx
@@ -30,7 +30,7 @@ import { UniverSheetsFindReplacePlugin } from '@univerjs/sheets-find-replace';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as FindReplaceEnUS } from '@univerjs/find-replace';
+import { enUS as FindReplaceEnUS } from '@univerjs/find-replace';
 
 // Above 0.1.13+
 // import FindReplaceEnUS from '@univerjs/find-replace/locale/en-US';
