--- a/src/pages/guides/sheet/features/thread-comment.en-US.mdx
+++ b/src/pages/guides/sheet/features/thread-comment.en-US.mdx
@@ -33,8 +33,8 @@ import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as ThreadCommentUIEnUS } from '@univerjs/thread-comment-ui';
-import { zhCN as SheetsThreadCommentEnUS } from '@univerjs/sheets-thread-comment';
+import { enUS as ThreadCommentUIEnUS } from '@univerjs/thread-comment-ui';
+import { enUS as SheetsThreadCommentEnUS } from '@univerjs/sheets-thread-comment';
 
 // Above 0.1.13+
 // import ThreadCommentUIEnUS from '@univerjs/thread-comment-ui/locale/en-US';
