--- a/src/pages/guides/sheet/features/zen-editor.en-US.mdx
+++ b/src/pages/guides/sheet/features/zen-editor.en-US.mdx
@@ -31,7 +31,7 @@ import { UniverSheetsZenEditorPlugin } from '@univerjs/sheets-zen-editor';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsZenEditorEnUS } from '@univerjs/sheets-zen-editor';
+import { enUS as SheetsZenEditorEnUS } from '@univerjs/sheets-zen-editor';
 
 // Above 0.1.13+
 // import SheetsZenEditorEnUS from '@univerjs/sheets-zen-editor/locale/en-US';
