--- a/src/pages/guides/sheet/features/conditional-formatting.en-US.mdx
+++ b/src/pages/guides/sheet/features/conditional-formatting.en-US.mdx
@@ -29,10 +29,7 @@ import { UniverSheetsConditionalFormattingUIPlugin } from '@univerjs/sheets-cond
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsConditionalFormattingUIEnUS } from '@univerjs/sheets-conditional-formatting-ui';
-
-// Above 0.1.13+
-// import SheetsConditionalFormattingUIEnUS from '@univerjs/sheets-conditional-formatting-ui/locale/en-US';
+import SheetsConditionalFormattingUIEnUS from '@univerjs/sheets-conditional-formatting-ui/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
