--- a/src/pages/guides/sheet/features/conditional-formatting.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/conditional-formatting.zh-CN.mdx
@@ -29,10 +29,7 @@ import { UniverSheetsConditionalFormattingUIPlugin } from '@univerjs/sheets-cond
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsConditionalFormattingUIZhCN } from '@univerjs/sheets-conditional-formatting-ui';
-
-// Above 0.1.13+
-// import SheetsConditionalFormattingUIZhCN from '@univerjs/sheets-conditional-formatting-ui/locale/zh-CN';
+import SheetsConditionalFormattingUIZhCN from '@univerjs/sheets-conditional-formatting-ui/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
