--- a/src/pages/guides/sheet/features/core.en-US.mdx
+++ b/src/pages/guides/sheet/features/core.en-US.mdx
@@ -48,18 +48,11 @@ import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as DesignEnUS } from '@univerjs/design';
-import { enUS as DocsUIEnUS } from '@univerjs/docs-ui';
-import { enUS as SheetsEnUS } from '@univerjs/sheets';
-import { enUS as SheetsUIEnUS } from '@univerjs/sheets-ui';
-import { enUS as UIEnUS } from '@univerjs/ui';
-
-// Above 0.1.13+
-// import DesignEnUS from '@univerjs/design/locale/en-US';
-// import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
-// import SheetsEnUS from '@univerjs/sheets/locale/en-US';
-// import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
-// import UIEnUS from '@univerjs/ui/locale/en-US';
+import DesignEnUS from '@univerjs/design/locale/en-US';
+import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
+import SheetsEnUS from '@univerjs/sheets/locale/en-US';
+import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
+import UIEnUS from '@univerjs/ui/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
