--- a/src/pages/guides/sheet/features/core.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/core.zh-CN.mdx
@@ -48,18 +48,11 @@ import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as DesignZhCN } from '@univerjs/design';
-import { zhCN as DocsUIZhCN } from '@univerjs/docs-ui';
-import { zhCN as SheetsZhCN } from '@univerjs/sheets';
-import { zhCN as SheetsUIZhCN } from '@univerjs/sheets-ui';
-import { zhCN as UIZhCN } from '@univerjs/ui';
-
-// Above 0.1.13+
-// import DesignZhCN from '@univerjs/design/locale/zh-CN';
-// import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
-// import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
-// import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
-// import UIZhCN from '@univerjs/ui/locale/zh-CN';
+import DesignZhCN from '@univerjs/design/locale/zh-CN';
+import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
+import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
+import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
+import UIZhCN from '@univerjs/ui/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
