--- a/src/pages/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/pages/guides/sheet/features/data-validation.en-US.mdx
@@ -30,10 +30,7 @@ import { UniverSheetsDataValidationPlugin } from '@univerjs/sheets-data-validati
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as SheetsDataValidationEnUS } from '@univerjs/sheets-data-validation';
-
-// Above 0.1.13+
-// import SheetsDataValidationEnUS from '@univerjs/sheets-data-validation/locale/en-US';
+import SheetsDataValidationEnUS from '@univerjs/sheets-data-validation/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
