--- a/src/pages/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/data-validation.zh-CN.mdx
@@ -30,10 +30,7 @@ import { UniverSheetsDataValidationPlugin } from '@univerjs/sheets-data-validati
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsDataValidationZhCN } from '@univerjs/sheets-data-validation';
-
-// Above 0.1.13+
-// import SheetsDataValidationZhCN from '@univerjs/sheets-data-validation/locale/zh-CN';
+import SheetsDataValidationZhCN from '@univerjs/sheets-data-validation/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
