--- a/src/pages/guides/sheet/features/find-replace.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/find-replace.zh-CN.mdx
@@ -30,10 +30,7 @@ import { UniverSheetsFindReplacePlugin } from '@univerjs/sheets-find-replace';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as FindReplaceZhCN } from '@univerjs/find-replace';
-
-// Above 0.1.13+
-// import FindReplaceZhCN from '@univerjs/find-replace/locale/zh-CN';
+import FindReplaceZhCN from '@univerjs/find-replace/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
