--- a/src/pages/guides/sheet/features/numfmt.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/numfmt.zh-CN.mdx
@@ -31,10 +31,7 @@ import { UniverSheetsNumfmtPlugin } from '@univerjs/sheets-numfmt';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsNumfmtZhCN } from '@univerjs/sheets-numfmt';
-
-// Above 0.1.13+
-// import SheetsNumfmtZhCN from '@univerjs/sheets-numfmt/locale/zh-CN';
+import SheetsNumfmtZhCN from '@univerjs/sheets-numfmt/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
