--- a/src/pages/guides/sheet/features/thread-comment.en-US.mdx
+++ b/src/pages/guides/sheet/features/thread-comment.en-US.mdx
@@ -33,12 +33,8 @@ import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as ThreadCommentUIEnUS } from '@univerjs/thread-comment-ui';
-import { enUS as SheetsThreadCommentEnUS } from '@univerjs/sheets-thread-comment';
-
-// Above 0.1.13+
-// import ThreadCommentUIEnUS from '@univerjs/thread-comment-ui/locale/en-US';
-// import SheetsThreadCommentEnUS from '@univerjs/sheets-thread-comment/locale/en-US';
+ThreadCommentUIEnUS from '@univerjs/thread-comment-ui/locale/en-US';
+import SheetsThreadCommentEnUS from '@univerjs/sheets-thread-comment/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
