--- a/src/pages/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -33,12 +33,8 @@ import { zhCN as SheetsThreadCommentEnUS } from '@univerjs/sheets-thread-comment
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as ThreadCommentUIZhCN } from '@univerjs/thread-comment-ui';
-import { zhCN as SheetsThreadCommentZhCN } from '@univerjs/sheets-thread-comment';
-
-// Above 0.1.13+
-// import ThreadCommentUIZhCN from '@univerjs/thread-comment-ui/locale/zh-CN';
-// import SheetsThreadCommentZhCN from '@univerjs/sheets-thread-comment/locale/zh-CN';
+import ThreadCommentUIZhCN from '@univerjs/thread-comment-ui/locale/zh-CN';
+import SheetsThreadCommentZhCN from '@univerjs/sheets-thread-comment/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
