--- a/src/pages/guides/sheet/features/uniscript.en-US.mdx
+++ b/src/pages/guides/sheet/features/uniscript.en-US.mdx
@@ -29,10 +29,7 @@ import { UniverUniscriptPlugin } from '@univerjs/uniscript';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as UniscriptEnUS } from '@univerjs/uniscript';
-
-// Above 0.1.13+
-// import UniscriptEnUS from '@univerjs/uniscript/locale/en-US';
+import UniscriptEnUS from '@univerjs/uniscript/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
