--- a/src/pages/guides/sheet/features/uniscript.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/uniscript.zh-CN.mdx
@@ -29,10 +29,7 @@ import { UniverUniscriptPlugin } from '@univerjs/uniscript';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as UniscriptZhCN } from '@univerjs/uniscript';
-
-// Above 0.1.13+
-// import UniscriptZhCN from '@univerjs/uniscript/locale/zh-CN';
+import UniscriptZhCN from '@univerjs/uniscript/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
