--- a/src/pages/guides/sheet/features/zen-editor.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/zen-editor.zh-CN.mdx
@@ -31,10 +31,7 @@ import { UniverSheetsZenEditorPlugin } from '@univerjs/sheets-zen-editor';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { zhCN as SheetsZenEditorZhCN } from '@univerjs/sheets-zen-editor';
-
-// Above 0.1.13+
-// import SheetsZenEditorZhCN from '@univerjs/sheets-zen-editor/locale/zh-CN';
+import SheetsZenEditorZhCN from '@univerjs/sheets-zen-editor/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
