--- a/src/pages/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/pages/guides/sheet/getting-started/installation.en-US.mdx
@@ -105,6 +105,10 @@ univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
 
 export const code = `const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.EN_US,
+  locales: {
+    [LocaleType.EN_US]: enUS,
+  },
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
