--- a/src/pages/guides/sheet/introduction.zh-CN.mdx
+++ b/src/pages/guides/sheet/introduction.zh-CN.mdx
@@ -69,6 +69,10 @@ export const features = [{
 
 export const code = `const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.ZH_CN,
+  locales: {
+    [LocaleType.ZH_CN]: zhCN,
+  },
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
