--- a/src/pages/guides/sheet/facade/sheet.en-US.mdx
+++ b/src/pages/guides/sheet/facade/sheet.en-US.mdx
@@ -19,6 +19,10 @@ The `univer.createUnit(UniverInstanceType.UNIVER_SHEET, {})` method creates and 
 
 export const code = `const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.EN_US,
+  locales: {
+    [LocaleType.EN_US]: enUS,
+  },
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
@@ -105,6 +109,10 @@ The following example shows how to create a worksheet using the `Workbook.create
 
 export const code2 = `const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.EN_US,
+  locales: {
+    [LocaleType.EN_US]: enUS,
+  },
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
@@ -126,10 +134,10 @@ univer.registerPlugin(UniverSheetsFormulaPlugin);
 univer.createUnit(UniverInstanceType.UNIVER_SHEET, {})
 
 const univerAPI = FUniver.newAPI(univer);
-const activeWorkbook = univerAPI.getActiveWorkbook();
+//const activeWorkbook = univerAPI.getActiveWorkbook();
 
 // Create a new sheet that named 'Sheet2' with 10 rows and 10 columns
-const sheet = activeWorkbook.create('Sheet2', 10, 10)`
+//const sheet = activeWorkbook.create('Sheet2', 10, 10)`
 
 <ReactLive code={code2}  />
 
@@ -169,7 +177,7 @@ The following is a typical cell object:
 For detailed field descriptions, please refer to [Configure Cell Data](/guides/configuration/cell-data/).
 
 <Callout type="info" emoji="ℹ️">
-  Cell operations can be regarded as operations on a range of rows and columns with a height of 1 and a width of 1. For the operation range, please refer to [Range](#range).
+  Cell operations can be regarded as operations on a range of rows and columns with a height of 1 and a width of 1. For the operation range, please refer to [Range](/guides/sheet/facade/sheet#range).
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
@@ -220,18 +228,19 @@ univerAPI.getSheetHooks().onCellDrop((cell) => {
 
 ```ts
 univerAPI.onCommandExecuted((command) => {
-    if(command.id === 'sheet.operation.set-cell-edit-visible' && command.params.visible){
-        console.log('Cell edit visible')
-    }
+  if(command.id === 'sheet.operation.set-cell-edit-visible' && command.params.visible){
+    console.log('Cell edit visible')
+  }
 })
 ```
 
 ### Cell Exits Editing
+
 ```ts
 univerAPI.onCommandExecuted((command) => {
-    if(command.id === 'sheet.operation.set-cell-edit-visible' && !command.params.visible){
-        console.log('Cell edit invisible')
-    }
+  if(command.id === 'sheet.operation.set-cell-edit-visible' && !command.params.visible){
+    console.log('Cell edit invisible')
+  }
 })
 ```
 
