--- a/src/pages/guides/sheet/features/numfmt.en-US.mdx
+++ b/src/pages/guides/sheet/features/numfmt.en-US.mdx
@@ -31,10 +31,7 @@ import { UniverSheetsNumfmtPlugin } from '@univerjs/sheets-numfmt';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as SheetsNumfmtEnUS } from '@univerjs/sheets-numfmt';
-
-// Above 0.1.13+
-// import SheetsNumfmtEnUS from '@univerjs/sheets-numfmt/locale/en-US';
+import SheetsNumfmtEnUS from '@univerjs/sheets-numfmt/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
