--- a/src/pages/guides/sheet/features/zen-editor.en-US.mdx
+++ b/src/pages/guides/sheet/features/zen-editor.en-US.mdx
@@ -31,10 +31,7 @@ import { UniverSheetsZenEditorPlugin } from '@univerjs/sheets-zen-editor';
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core'
-import { enUS as SheetsZenEditorEnUS } from '@univerjs/sheets-zen-editor';
-
-// Above 0.1.13+
-// import SheetsZenEditorEnUS from '@univerjs/sheets-zen-editor/locale/en-US';
+import SheetsZenEditorEnUS from '@univerjs/sheets-zen-editor/locale/en-US';
 
 const univer = new Univer({
   theme: defaultTheme,
