docs: fix i18n docs

--- a/src/pages/guides/doc/getting-started/installation.zh-CN.mdx
+++ b/src/pages/guides/doc/getting-started/installation.zh-CN.mdx
@@ -76,9 +76,9 @@ import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
 ```typescript
 const univer = new Univer({
   theme: defaultTheme,
-  locale: LocaleType.EN_US,
+  locale: LocaleType.ZH_CN,
   locales: {
-    [LocaleType.EN_US]: enUS,
+    [LocaleType.ZH_CN]: zhCN,
   },
 });
 
@@ -105,9 +105,9 @@ univer.createUnit(UniverInstanceType.UNIVER_DOC, {});
 
 export const code = `const univer = new Univer({
   theme: defaultTheme,
-  locale: LocaleType.EN_US,
+  locale: LocaleType.ZH_CN,
   locales: {
-    [LocaleType.EN_US]: enUS,
+    [LocaleType.ZH_CN]: zhCN,
   },
 });
 
