--- a/src/pages/guides/sheet/getting-started/i18n.en-US.mdx
+++ b/src/pages/guides/sheet/getting-started/i18n.en-US.mdx
@@ -8,9 +8,9 @@ If you need to manually add language packs, you can refer to the following examp
 
 ```typescript
 import { LocaleType, Tools } from '@univerjs/core';
-import DesignZhCN from '@univerjs/design/locale/en-US';
-import UIZhCN from '@univerjs/ui/locale/en-US';
-import DocsUIZhCN from '@univerjs/docs-ui/locale/en-US';
+import DesignEnUS from '@univerjs/design/locale/en-US';
+import UIEnUS from '@univerjs/ui/locale/en-US';
+import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
 import SheetsEnUS from '@univerjs/sheets/locale/en-US';
 import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
 
